<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
<parent>
  <groupId>org.opennms</groupId>
  <artifactId>opennms-integrations</artifactId>
  <version>17.0.0-SNAPSHOT</version>
</parent>
  <!-- the name must alphabetically come before jasperreports jar -->
  <artifactId>jasper-extensions</artifactId>
  <name>OpenNMS Integrations Jasper Extensions</name>
  <url>http://maven.apache.org</url>
  <packaging>bundle</packaging>
  <properties>
    <skipITs>true</skipITs>
  </properties>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <!-- To load the jar file into jaspersoft studio it is required to be Java 6 compatible -->
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <extensions>true</extensions>
        <configuration>
          <instructions>
            <Bundle-RequiredExecutionEnvironment>JavaSE-1.6</Bundle-RequiredExecutionEnvironment>
            <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
            <Bundle-Version>${project.version}</Bundle-Version>
          </instructions>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.16</version>
        <configuration>
          <skipITs>${skipITs}</skipITs>
          <argLine>-Xmx1g -Djava.endorsed.dirs=${basedir}/target/endorsed</argLine>
          <systemPropertyVariables>
            <opennms.home>${project.build.testOutputDirectory}</opennms.home>
            <java.endorsed.dirs>${basedir}/target/endorsed</java.endorsed.dirs>
          </systemPropertyVariables>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!-- TODO MVR we do not need this anymore, do we? -->
      <plugin>
        <groupId>org.opennms.maven.plugins</groupId>
        <artifactId>castor-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>add-source</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>add-source</goal>
            </goals>
            <configuration>
              <sources>
                <source>${project.build.directory}/generated-sources/castor</source>
              </sources>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- TODO MVR we do not need this anymore, do we? -->
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <extensions>true</extensions>
        <configuration>
          <descriptors>
            <descriptor>src/assembly/xsds.xml</descriptor>
          </descriptors>
          <tarLongFileMode>posix</tarLongFileMode>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>

    <!-- TODO MVR we do not need this anymore, do we? -->
    <pluginManagement>
    	<plugins>
    		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
    		<plugin>
    			<groupId>org.eclipse.m2e</groupId>
    			<artifactId>lifecycle-mapping</artifactId>
    			<version>1.0.0</version>
    			<configuration>
    				<lifecycleMappingMetadata>
    					<pluginExecutions>
    						<pluginExecution>
    							<pluginExecutionFilter>
    								<groupId>
    									org.opennms.maven.plugins
    								</groupId>
    								<artifactId>
    									castor-maven-plugin
    								</artifactId>
    								<versionRange>[1.0,)</versionRange>
    								<goals>
    									<goal>generate</goal>
    								</goals>
    							</pluginExecutionFilter>
    							<action>
    								<ignore></ignore>
    							</action>
    						</pluginExecution>
    					</pluginExecutions>
    				</lifecycleMappingMetadata>
    			</configuration>
    		</plugin>
    	</plugins>
    </pluginManagement>
  </build>
  <!-- TODO MVR optimize dependencies -->
  <dependencies>
    <dependency>
      <groupId>org.opennms.dependencies</groupId>
      <artifactId>castor-dependencies</artifactId>
      <type>pom</type>
    </dependency>
    <dependency>
      <groupId>org.opennms.dependencies</groupId>
      <artifactId>jasper-dependencies</artifactId>
      <type>pom</type>
    </dependency>
    <dependency>
      <groupId>org.opennms.dependencies</groupId>
      <artifactId>jrobin-dependencies</artifactId>
      <type>pom</type>
    </dependency>
    <dependency>
      <groupId>org.opennms.core</groupId>
      <artifactId>org.opennms.core.lib</artifactId>
    </dependency>
    <dependency>
      <groupId>org.opennms</groupId>
      <artifactId>opennms-util</artifactId>
    </dependency>
    <dependency>
      <groupId>org.opennms</groupId>
      <artifactId>analytics-filters</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
    </dependency>
    <!-- TODO MVR brauchen wir das immer noch? -->
    <dependency>
      <groupId>org.opennms</groupId>
      <artifactId>opennms-rrd-model</artifactId>
      <version>${project.version}</version>
      <scope>test</scope>
    </dependency>
    <!-- TODO MVR bruachen wir das immer? -->
    <dependency>
      <groupId>org.opennms.features.measurements</groupId>
      <artifactId>org.opennms.features.measurements.api</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>com.github.tomakehurst</groupId>
      <artifactId>wiremock</artifactId>
      <version>1.57</version>
      <scope>test</scope>
    </dependency>
    <!-- TODO MVR wieder entfernen -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>1.7.7</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <pluginRepositories>
    <pluginRepository>
      <snapshots><enabled>false</enabled></snapshots>
      <releases><enabled>true</enabled></releases>
      <id>opennms-repo</id>
      <name>OpenNMS Repository</name>
      <url>http://maven.opennms.org/content/groups/opennms.org-release</url>
    </pluginRepository>
  </pluginRepositories>
  <repositories>
    <repository>
      <snapshots><enabled>false</enabled></snapshots>
      <releases><enabled>true</enabled></releases>
      <id>opennms-repo</id>
      <name>OpenNMS Repository</name>
      <url>http://maven.opennms.org/content/groups/opennms.org-release</url>
    </repository>
  </repositories>
</project>
